--- a/pentaho-gis-plugins/pom.xml
+++ b/pentaho-gis-plugins/pom.xml
@@ -11,10 +11,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <description>Pentaho's Data Integrator GIS Plugins</description>
 
   <profiles>
+	<profile>
+      <id>pentaho-8</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+        <property>
+          <name>pentaho</name>
+          <value>8</value>
+        </property>
+      </activation>
+      <properties>
+        <pentaho.version>8.3.0.0-104</pentaho.version>
+      </properties>
+    </profile>
     <profile>
       <id>pentaho-7</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
         <property>
           <name>pentaho</name>
           <value>7</value>
@@ -118,38 +130,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <url>file://${project.basedir}/../local-maven-repo</url>
     </repository>
     <repository>
-      <id>52north.org-releases</id>
-      <name>52north.org-releases</name>
-      <url>http://52north.org/maven/repo/releases/</url>
-    </repository>
-    <repository>
-      <id>datanucleus</id>
-      <name>datanucleus</name>
-      <url>http://www.datanucleus.org/downloads/maven2/</url>
-    </repository>
-    <repository>
-      <id>jboss.org</id>
-      <name>jboss.org</name>
-      <url>https://repository.jboss.org</url>
-    </repository>
-    <repository>
       <id>pentaho-releases</id>
-      <url>http://repository.pentaho.org/artifactory/repo/</url>
-    </repository>
-    <repository>
-      <id>lds-main</id>
-      <name>Main Approved LDS Repo</name>
-      <url>http://code.lds.org/nexus/content/groups/main-repo</url>
-    </repository>
-    <repository>
-      <id>maven-us.nuxeo.org</id>
-      <name>maven-us.nuxeo.org</name>
-      <url>http://maven-us.nuxeo.org/nexus/content/groups/public/</url>
-    </repository>
-    <repository>
-      <id>axiomalaska</id>
-      <name>axiomalaska</name>
-      <url>http://nexus.axiomalaska.com/nexus/content/groups/public/</url>
+      <url>https://nexus.pentaho.org/repository/proxy-pentaho-public-release-group/</url>
     </repository>
   </repositories>
 
