--- a/pentaho-gis-plugins/pom.xml
+++ b/pentaho-gis-plugins/pom.xml
@@ -21,7 +21,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </property>
       </activation>
       <properties>
-        <pentaho.version>8.3.0.0-104</pentaho.version>
+        <pentaho.version>8.3.0.6-574</pentaho.version>
       </properties>
     </profile>
     <profile>
@@ -101,7 +101,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.2.0</version>
         <configuration>
           <appendAssemblyId>false</appendAssemblyId>
           <descriptors>
@@ -133,7 +133,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <id>pentaho-releases</id>
       <url>https://nexus.pentaho.org/repository/proxy-pentaho-public-release-group/</url>
     </repository>
+	<repository>
+      <id>springio</id>
+      <url>https://repo.spring.io/plugins-release/</url>
+    </repository>
   </repositories>
+
+	
 
   <dependencies>
     <!-- PDI internals -->
@@ -187,7 +193,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <dependency>
       <groupId>com.oracle</groupId>
       <artifactId>ojdbc6</artifactId>
-      <version>11.2.0.1.0</version>
+      <version>11.2.0.3</version>
     </dependency>
 
     <!-- Plugin specific -->
@@ -215,12 +221,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <dependency>
       <groupId>org.orbisgis</groupId>
       <artifactId>cts</artifactId>
-      <version>1.3.3</version>
+      <version>1.3.4</version>
     </dependency>
     <dependency>
       <groupId>de.micromata.jak</groupId>
       <artifactId>JavaAPIforKml</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <version>2.2.0</version>
     </dependency>
     <!-- Atol projects -->
     <dependency>
